fixing footer alignment and content in mobile version

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -35,11 +35,19 @@
 }
 .col2 ul{
     font-family: 'Somar';
-    font-size: 0.8rem;
+    font-size: 1rem;
     gap: 0.5rem;
+}
+.col1 p{
+    font-size: 1rem;
 }
 .col3{
     flex: 0.4;
+}
+.copy span{
+    font-size: 0.9;
+    display: block;
+    padding: 10px 0 20px 0;
 }
 
 
@@ -47,13 +55,13 @@
 @media (max-width: 768px) {
     .footer-content {
         flex-direction: column;
-        align-items: center;
-        gap: 1.5rem;
+        /* align-items: center; */
+        /* gap: 1.5rem; */
     }
 
     .col1, .col2, .col3 {
         flex: 1;
-        text-align: center;
+        text-align: left;
     }
 
     .col1 img {
@@ -69,9 +77,19 @@
 
     .col1, .col2, .col3 {
         font-size: 0.7rem;
+        
     }
-
+    .col2{
+        gap:0;
+    }
     .col1 img {
-        width: 70%;
+        width: 40%;
+        
+    }
+    .col1 p{
+        display: none;
+    }
+    .copy span{
+        font-size: 14px;
     }
 }
